fixed text align and font size and white space css

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
     color: white;
     z-index: 9999;
     overflow: hidden;
-    height: 80px;
+    height: fit-content;
     align-items: center;
     justify-content: center;
     border-top: 2px solid #fff;
@@ -36,6 +36,7 @@
 
 .wprcb-cookie-bar a.learn-more {
     word-break: keep-all;
+    white-space: nowrap;
 }
 .wprcb-cookie-bar p.wprcb-text {
     margin:0px;
@@ -44,4 +45,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 16px;
+    text-align: center;
 }
